service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx
spec:
  selector:
    app: nginx
    namespace: <ditt-navn> # CHANGE ME
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
